added 1 article and 2 chapters of sutton

--- a/articles/article-summaries.ipynb
+++ b/articles/article-summaries.ipynb
@@ -19,6 +19,7 @@
     "\n",
     "## To Read:\n",
     "\n",
+    "* [Safe and Efficient Off-Policy Reinforcement Learning](https://arxiv.org/abs/1606.02647) - to read after eligibility traces\n",
     "* [Playing Atari with Deep Reinforcement Learning](https://arxiv.org/abs/1312.5602) - some old article with DNN playing atari games - check if maybe it contains some medium difficulty to implement algorithm.\n",
     "* [Weighted importance sampling for off-policy learning with linear function approximation](https://hadovanhasselt.files.wordpress.com/2015/12/wis_for_off_policy.pdf) - [high priority] implement after sutton\n",
     "* [Off-policy learning based on weighted importance sampling with linear computational complexity](http://auai.org/uai2015/proceedings/papers/165.pdf) -[low priority] to implement after sutton  (might be easier then above)\n",
