--- a/books/sutton-reinforcement-learning-intro.ipynb
+++ b/books/sutton-reinforcement-learning-intro.ipynb
@@ -19,6 +19,87 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Chapter 2. Multi-arm Bandits\n",
+    "\n",
+    "You are faced repeatedly with a choice among $k$ different options or actions. How do you choose to maximize your return over long term?\n",
+    "\n",
+    "Notation:\n",
+    "- $A_t$ - action at time t\n",
+    "- $R_t$ - reward after taking action $A_t$\n",
+    "- $q_*(a)=E[R_t|A_t=a]$ - value of action $a$\n",
+    "- $Q_t(a)$ - estimate of $q_*(a)$ at time t\n",
+    "\n",
+    "**Action-value methods**\n",
+    "Natural way to estimate $Q(a)$ would be to compute **sample average**:\n",
+    "$$Q_t(a) = \\frac{\\text{sum of rewards when a taken prior to t}}{\\text{number of times a taken prior to t}}$$\n",
+    "\n",
+    "and then choose the arm with the biggest estimate (**greedy action**). \n",
+    "\n",
+    "Incremental implementation:\n",
+    "\n",
+    "$$Q_{n+1} = Q_n + \\frac{1}{n}[R_n-Q_n]$$\n",
+    "\n",
+    "For non-stationary problems better might be (**recency**) **weighted average**:\n",
+    "$$Q_{n+1} = Q_n + \\alpha[R_n-Q_n]$$\n",
+    "\n",
+    "The fundamental problem of multiarmed bandits is the **exploration vs exploitation ratio**, which is a way of choosing if we explore or exploit in a given step. Some approaches:\n",
+    "\n",
+    "- $\\epsilon$-greedy - choose random arm $\\epsilon$ times, and greedy one $1-\\epsilon$ times,\n",
+    "- optimistic initial vales - you start with some big values for each arm and then choose greedily and update them as you go (this way each arm will be choosen lots of times),\n",
+    "- Upper Confidence Bound, you choose according to arm value:\n",
+    "$$A_t=\\arg\\max_a[Q_t(a)+c\\sqrt{\\frac{\\log{t}}{N_t(a)}}]$$\n",
+    "where $c$ is a constant that controls degree of exploration.\n",
+    "- gradient bandit algorithms - here we estimate a **policy** directly, which is a probability distribution on arms:\n",
+    "$$\\pi_t(a) = P(A_t=a) = \\frac{e^{H_t(a)}}{\\sum_{b=1}^{k}e^{H_t(b)}}$$\n",
+    "where $H_t(a)$ are computed according to an update rule which is after selecting arm $A_t$ does:\n",
+    "$$H_{t+1}(A_t)=H_t(A_t)+\\alpha(R_t-\\overline{R_t})(1-\\pi_t(A_t))$$ and\n",
+    "$$H_{t+1}(a)=H_t(a)-\\alpha(R_t-\\overline{R_t})\\pi_t(a)$$ for $a\\neq A_t$. It can be shown that the rule above can be derived from:\n",
+    "$$H_{t+1}(a)=H_t(a)+\\alpha \\frac{\\partial E[R_t]}{\\partial H_t(a)}$$\n",
+    "The substraction of the term $\\overline{R_t}$ makes the variance lower (but could be skipped).\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Chapter 3. Finite Markov Decision Processes\n",
+    "\n",
+    "This chapter basically introduces notation and sets up the problem for future chapters.\n",
+    "\n",
+    "At each time step $t=1,2,3,...$ the agent receives some representation of the environment's **state**, $S_t\\in\\mathcal{S}$, where $\\mathcal{S}$ is a set of all possible states. Then, the agent chooses some **action** $A_t\\in\\mathcal{A}(S_t)$, where $\\mathcal{A}(S_t)$ is a set of actions available in the state $S_t$. One time-step later agent receives a numerical **reward** (as a part of consequence), $R_{t+1} \\in \\mathcal{R} \\subset\\mathbb{R}$ and finds itself in new state $S_{t+1}$.\n",
+    "\n",
+    "At each step, agent implements a mapping from states to distributions over actions which is called a **policy** and is denoted $\\pi_t$, where $\\pi_t(a|s)$ is the probability that $A_t=a$ if $S_t=s$.\n",
+    "\n",
+    "The **return** is a sum of rewards over time:\n",
+    "$$G_t=\\sum_{k=0}^{\\infty}\\gamma^kR_{t+k+1}$$\n",
+    "where $\\gamma\\in[0,1]$ and is usually equal to $1$ for **episodic tasks** (such ones that the probability that they will end is $1$ and $R_t$ will be always $0$ after some time $T$) and less then $1$ for **continuing tasks**.\n",
+    "\n",
+    "The environment has **the Markov property** when it's response at time $t+1$ depends only on it's state and action taken at time $t$:\n",
+    "$$\\mathbb{P}(S_{t+1},R_{t+1}|S_0,A_0,R_1,...,S_{t-1},A_{t-1},R_t,S_t,A_t) = \\mathbb{P}(S_{t+1},R_{t+1}|S_t,A_t)$$\n",
+    "\n",
+    "A reinforcement learning task that satisfies the Markov property is called a **Markov decision process** (MDP). If the state and action spaces are finite then it's called a **finite** MDP.\n",
+    "\n",
+    "Some more notation:\n",
+    "\n",
+    "$$p(s',r|s,a)=\\mathbb{P}(S_{t+1}=s',R_{t+1}=r|S_t=s,A_t=a)$$\n",
+    "$$r(s,a) = \\mathbb{E}[R_{t+1}|S_t=s,A_t=a] = \\sum_{r\\in\\mathcal{R}} r\\sum_{s'\\in\\mathcal{S}} p(s',r|s,a)$$\n",
+    "\n",
+    "**Value function** for policy $\\pi$:\n",
+    "$$v_\\pi(s) = \\mathbb{E}_\\pi[G_t|S_t=s]=\\mathbb{E}_\\pi[\\sum_{k=0}^{\\infty}\\gamma^kR_{t+k+1}|S_t=s]$$\n",
+    "**Action-value function** for policy $\\pi$:\n",
+    "$$q_\\pi(s,a) = \\mathbb{E}_\\pi[G_t|S_t=s,A_t=a]=\\mathbb{E}_\\pi[\\sum_{k=0}^{\\infty}\\gamma^kR_{t+k+1}|S_t=s,A_t=a]$$\n",
+    "\n",
+    "Bellman equation for value function:\n",
+    "$$v_\\pi(s)=\\sum_a\\pi(a|s)\\sum_{s',r}p(s',r|s,a)(r+\\gamma v_\\pi(s'))$$\n",
+    "\n",
+    "TODO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Chapter 4. Dynamic Programming\n",
     "\n",
     "**Key idea of DP:** Use value functions to organize search for good policies.\n",
