--- a/notes/ai-reinforcement-learning-notes.ipynb
+++ b/notes/ai-reinforcement-learning-notes.ipynb
@@ -21,9 +21,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:openai]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-openai-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -35,7 +35,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
