--- a/books/sutton-reinforcement-learning-intro.ipynb
+++ b/books/sutton-reinforcement-learning-intro.ipynb
@@ -90,10 +90,17 @@
     "**Action-value function** for policy $\\pi$:\n",
     "$$q_\\pi(s,a) = \\mathbb{E}_\\pi[G_t|S_t=s,A_t=a]=\\mathbb{E}_\\pi[\\sum_{k=0}^{\\infty}\\gamma^kR_{t+k+1}|S_t=s,A_t=a]$$\n",
     "\n",
-    "Bellman equation for value function:\n",
+    "Bellman equation for value functions:\n",
     "$$v_\\pi(s)=\\sum_a\\pi(a|s)\\sum_{s',r}p(s',r|s,a)(r+\\gamma v_\\pi(s'))$$\n",
+    "$$q_\\pi(s,a)=\\sum_{s',r}p(s',r|s,a)(r+\\gamma \\sum_{a'}\\pi(a'|s') q_\\pi(s',a'))$$\n",
     "\n",
-    "TODO"
+    "**Optimal vale function** for finite MDP is:\n",
+    "$$v_*(s) = \\max_\\pi v_\\pi(s)$$\n",
+    "$$q_*(s,a) = \\max_\\pi q_\\pi(s,a)$$\n",
+    "\n",
+    "**Bellman optimality equations are**:\n",
+    "$$v_*(s)=\\max_a\\sum_{s',r}p(s',r|s,a)[r+\\gamma v_*(s')]$$\n",
+    "$$q_*(s,a)=\\sum_{s',r}p(s',r|s,a)[r+\\gamma \\max_{a'}q_*(s',a')]$$"
    ]
   },
   {
