neural nets init

--- a/articles/article-summaries.ipynb
+++ b/articles/article-summaries.ipynb
@@ -23,6 +23,10 @@
     "* [Playing Atari with Deep Reinforcement Learning](https://arxiv.org/abs/1312.5602) - some old article with DNN playing atari games - check if maybe it contains some medium difficulty to implement algorithm.\n",
     "* [Weighted importance sampling for off-policy learning with linear function approximation](https://hadovanhasselt.files.wordpress.com/2015/12/wis_for_off_policy.pdf) - [high priority] implement after sutton\n",
     "* [Off-policy learning based on weighted importance sampling with linear computational complexity](http://auai.org/uai2015/proceedings/papers/165.pdf) -[low priority] to implement after sutton  (might be easier then above)\n",
+    "* [A Theoretical and Empirical Analysis of Expected Sarsa](https://staff.science.uva.nl/s.a.whiteson/pubs/vanseijenadprl09.pdf) - should be relatively simple. Good for replication.\n",
+    "* [Adam: A Method for Stochastic Optimization](https://arxiv.org/abs/1412.6980) - optimizers (state of the art but not really relevant now)\n",
+    "* [An overview of gradient descent optimization algorithms](https://arxiv.org/abs/1609.04747)- optimizers (state of the art but not really relevant now)\n",
+    "* [Why Momentum Really Works](https://distill.pub/2017/momentum/) - optimizers - read me now!\n",
     "\n",
     "***"
    ]
