--- a/books/sutton-reinforcement-learning-intro.ipynb
+++ b/books/sutton-reinforcement-learning-intro.ipynb
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "My open questions:\n",
-    "* find example of MDP where optimal eps-greedy policy has value faunction such that the grredy policy with respect to those values is not optimal (in the general sense).\n"
+    "* find example of MDP where optimal eps-greedy policy has value faunction such that the greedy policy with respect to those values is not optimal (in the general sense).\n"
    ]
   },
   {
@@ -94,7 +94,7 @@
     "$$v_\\pi(s)=\\sum_a\\pi(a|s)\\sum_{s',r}p(s',r|s,a)(r+\\gamma v_\\pi(s'))$$\n",
     "$$q_\\pi(s,a)=\\sum_{s',r}p(s',r|s,a)(r+\\gamma \\sum_{a'}\\pi(a'|s') q_\\pi(s',a'))$$\n",
     "\n",
-    "**Optimal vale function** for finite MDP is:\n",
+    "**Optimal value function** for finite MDP is:\n",
     "$$v_*(s) = \\max_\\pi v_\\pi(s)$$\n",
     "$$q_*(s,a) = \\max_\\pi q_\\pi(s,a)$$\n",
     "\n",
@@ -165,12 +165,81 @@
     "    \n",
     "* Ordinary importance sampling is unbiased but it has potentially unlimited (even infinite) varinace. Weighted importance sampling is asymptotically unbiased and has finite limited varinace (if we have bounded returns then the variance converges to zero). In practice the latter is preferred.\n",
     "* In the perfect scenario we are able to do **exploring starts** which means we can start an episode in arbitrary state taking arbitrary action. Then for policy evaluation we compute sample returns from exploring starts. To find optimal policy we interleave policy evaluation and improvement (we can speed it up by doing policy improvements after each episode). This procedure is called **Monte Carlo ES**. **Caveat:** it has not been formally proven that this procedure converges to optimal policy.\n",
+    "* My remark: a big disadvantage of MC is that it doesn't work if there are possible policies that make the episode infinite. Simple example is going deterministically between two states forth and back. It might be impossible to learn off-policy from such a behaviour policy. There might be some tweak to avoid this, but it's not obvious.\n",
     "\n",
     "Questions:\n",
     "* the state-action values we are learning are non-stationary, because we do value and policy iteration. (It becomes stationary at some point) Then why not use weighted averages instead of sample averages (like in bandits for non-stationary problems). Hmm, if it becomes stationary then it doesn't matter in the limit.\n",
     "* how to explore smartly? Using the info we have so far (kind of using UCB)? Maybe limiting amount of exploration moves within a path?\n",
     "* maybe some way to do approx of exploring starts?\n",
     "* how to improve on long paths? (For episodic tasks. Unless you are punished for long episodes.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Chapter 6. Temporal-Difference Learning\n",
+    "\n",
+    "* Temporal difference algorithms combine some features of Monte Carlo (sampling) and Dynamic Programming (bootstrapping).\n",
+    "* The basic idea is to update on every step (state, action, reward tuple) of a sample (this is known as TD(0) algorithm):\n",
+    "$$v(S_t) = v(S_t) + \\alpha [R_{t+1} + \\gamma v(S_{t+1}) - v(S_t)]$$\n",
+    "using current estimates of values ($v(S_{t+1})$) and sample reward ($R_{t+1}$). The name 'temporal difference' comes from the fact that we use estimate from another time-step to compute current one.\n",
+    "* Value of a state is:\n",
+    "$$v_{\\pi}(s) = \\mathbb{E}_{\\pi}[G_t|S_t=s] = \\mathbb{E}_{\\pi}[R_{t+1} + \\gamma v_{\\pi}(S_{t+1})|S_t=s]$$\n",
+    "Monte Carlo methods use the first part of the above equation as a target, while Dynamic Programming uses the second. TD combines the both, as it estmates the expected value from a sample like MC and uses the current estimate like DP.\n",
+    "* Some summary of differences between DP, MC and TD:\n",
+    "\n",
+    "| feature | TD | MC | DP |\n",
+    "| --- | --- | --- | --- |\n",
+    "| requires full knowledge of the environment (espc. trasition probs) | ✖ | ✖ | ✔ |\n",
+    "| kind of backup | sample | sample | full |\n",
+    "| bootstrap (~ using estimates to compute estimates) | ✔ | ✔ | ✖ |\n",
+    "| online | fully incremental | has to wait for end of episode | ✖ |\n",
+    "| learns on exploration | ✔ | uses only on-policy parts| not applicable |\n",
+    "* it's not proven formally, but in practice TD methods converge faster then constant-$\\alpha$ MC methods ($v(S_t) \\leftarrow v(S_t) + \\alpha [G_t - v(S_t)] $) on stochastic tasks.\n",
+    "* **batch updating** is a learning method where value function increments are computed for every non-terminal step in the batch of data, then value function is updated by sum of those, then whole procedure is repeated until convergence.\n",
+    "* TD(0) and constant-$\\alpha$ MC converge deterministically on batch updating but to different answer! Batch Monte Carlo converges to a solution that minimizes mean-squared error on training set, whereas TD(0) finds estimates that would be correct for the maximum-likelyhood model of the Markov process (model whose probability of generating the data is the greatest). This doesn't hold for non-batch methods, but illustrates that TD generally goes in a better direction which could explain why it is faster.\n",
+    "* Some nice example of the of why TD is faster are batch-learning value function estimates on such batch of data:\n",
+    "\n",
+    "|||\n",
+    "| --- | --- |\n",
+    "| A,0,B,0 | B,1 |\n",
+    "| B,1 | B,1 |\n",
+    "| B,1 | B,1 |\n",
+    "| B,1 | B,0 |\n",
+    "\n",
+    "MC would learn $v(A) = 0$ (the only sample for A gives return 0) while TD would learn $v(A)=\\frac{3}{4}$ (A leads to B with estimated prob 1 and B leads to reward 1 with estimated prob $\\frac{3}{4}$).\n",
+    "\n",
+    "* **SARSA** is an on-policy TD control method (algorithm solving the problem of finding optimal policy). The name comes from the tuple $(S_t,A_t,R_{t+1},S_{t+1},A_{t+1})$ that is used to compute value update:\n",
+    "    * $Q(S_t,A_t) \\leftarrow Q(S_t,A_t) + \\alpha [R_{t+1} + \\gamma Q(S_{t+1},A_{t+1})-Q(S_t,A_t))]$\n",
+    "    * if $S_{t+1}$ is terminal then $Q(S_{t+1},A_{t+1})$ equals $0$\n",
+    "    * SARSA is not formally proven to converge, but some unofficial results claim that it converges with probability 1 to an optimal policy as long as all state-action pairs are visited infinite number of times and policy converges to greedy one in the limit (this can be achieved by making it $\\epsilon$-greedy, where $\\epsilon$ converges to 0)\n",
+    "    * SARSA doesn't have problem (as MC methods do) with learning from policy that produces infinite episode (going forth and back between two states) as it learns during the episode (and changes policy).\n",
+    "* **Q-learning** is an off-policy TD control method defined by:\n",
+    "    * $Q(S_t,A_t) \\leftarrow Q(S_t,A_t) + \\alpha [R_{t+1} + \\gamma \\max_aQ(S_{t+1},a)-Q(S_t,A_t))]$\n",
+    "    * convergence (with probability 1) is guaranteed when all state-action pair are visited infinitely many times and usual stochastic approximation conditions on the sequence of step-size parameters (see page 35: $\\sum_{n=1}^{\\infty}\\alpha_n(a)=\\infty$ and $\\sum_{n=1}^{\\infty}\\alpha_n^2(a)<\\infty$).\n",
+    "* **Expected SARSA** is a learning algorithm that uses the expected value (with respect to current policy) of next state to learn the current:\n",
+    "    * $Q(S_t,A_t) \\leftarrow Q(S_t,A_t) + \\alpha [R_{t+1} + \\gamma \\mathbb{E}_{\\pi}[Q(S_{t+1}, A)|S_{t+1}] -Q(S_t,A_t))]$, which is:\n",
+    "    * $Q(S_t,A_t) \\leftarrow Q(S_t,A_t) + \\alpha [R_{t+1} + \\gamma \\sum_a \\pi(a|S_{t+1})Q(S_{t+1}, a) -Q(S_t,A_t))]$\n",
+    "    * it eleminitaes the variance that comes from sampled arm $A_{t+1}$ (like in SARSA), which is why we might expect it to perform better (and it does in practice),\n",
+    "    * it can be either on- or off-policy algorithm (depending on the choice of behaviour policy),\n",
+    "    * when state transitions are deterministic it can safely work with $\\alpha = 1$,\n",
+    "* **Maximization Bias and Double learning**:\n",
+    "    * imagine a MDP where you have two nonterminal states A and B:\n",
+    "    \n",
+    "    ![maximization bias example](figs/fig_6_8_part.png)\n",
+    "    \n",
+    "    * you always start at A and every arm going left from B gives a reward that is sampled from normal distribution: $N(-0.1, 1)$,\n",
+    "    * the optimal policy is to always go right, but due to randomness we will discover that some of the arms going left from B have positive value (which will converge to $-0.1$ with time) - Q-learning which uses the actions with currently highest values will be biased towards going left. The bias is induced by using the maximum function in TD-error updates and that is why it is called maximization bias (this generalizes to any algorithm that relies on maximization for chosing policy).\n",
+    "    * a key problem is that we use the same number for estimating value and for choosing action,\n",
+    "    * suppose we divide the steps of each episode into two groups and use each group for learning separate Q-function, so we would have $Q_1(s,a)$ and $Q_2(s,a)$ for every action $a$ - we are learning one with the other used to do value update:\n",
+    "$$Q_1(S_t,A_t) \\leftarrow Q_1(S_t,A_t) + \\alpha [R_{t+1} + \\gamma \\max_aQ_2(S_{t+1},a)-Q_1(S_t,A_t))]$$\n",
+    "    * learning $Q_2$ is done analogously as above (by switching the indexes)\n",
+    "    * the procedure of learning two Q functions is called **double Q-learning**, it can be applied to other methods like sarsa or expected-sarsa\n",
+    "* **Games, afterstates and special cases**:\n",
+    "    * the methods presented so far can be tailored for concrete problems at hand to get more adequate solutions\n",
+    "    * one exaple is considering **after-states** instead of states: in games where transitions between states are deterministic, we might want to compute values of states, after chosing a particular action in given state - this has great value when (for example) chosing action $a_1$ in state $s_1$ leads to the same state $s$ as chosing $a_2$ in $s_2$, by focusing on after-states we keep only one value estimate for both (which speeds up learning and reduces the amount of stat-action pairs to remember)\n",
+    "    "
    ]
   }
  ],
