--- a/books/sutton-reinforcement-learning-intro.ipynb
+++ b/books/sutton-reinforcement-learning-intro.ipynb
@@ -12,7 +12,8 @@
    "metadata": {},
    "source": [
     "My open questions:\n",
-    "* find example of MDP where optimal eps-greedy policy has value faunction such that the greedy policy with respect to those values is not optimal (in the general sense).\n"
+    "* find example of MDP where optimal eps-greedy policy has value faunction such that the greedy policy with respect to those values is not optimal (in the general sense).\n",
+    "    * the answer is in the exercise 6.6 - Cliff walking girdworld. The best eps-greedy policy (with fixed eps) will learn to avoid the cliff, since due to sometimes choosing a random arm it would fall from the cliff. The environment is deterministic, so the optimal policy is to go close to the cliff.\n"
    ]
   },
   {
@@ -167,7 +168,7 @@
     "* In the perfect scenario we are able to do **exploring starts** which means we can start an episode in arbitrary state taking arbitrary action. Then for policy evaluation we compute sample returns from exploring starts. To find optimal policy we interleave policy evaluation and improvement (we can speed it up by doing policy improvements after each episode). This procedure is called **Monte Carlo ES**. **Caveat:** it has not been formally proven that this procedure converges to optimal policy.\n",
     "* My remark: a big disadvantage of MC is that it doesn't work if there are possible policies that make the episode infinite. Simple example is going deterministically between two states forth and back. It might be impossible to learn off-policy from such a behaviour policy. There might be some tweak to avoid this, but it's not obvious.\n",
     "\n",
-    "Questions:\n",
+    "Some questions I had along the chapter:\n",
     "* the state-action values we are learning are non-stationary, because we do value and policy iteration. (It becomes stationary at some point) Then why not use weighted averages instead of sample averages (like in bandits for non-stationary problems). Hmm, if it becomes stationary then it doesn't matter in the limit.\n",
     "* how to explore smartly? Using the info we have so far (kind of using UCB)? Maybe limiting amount of exploration moves within a path?\n",
     "* maybe some way to do approx of exploring starts?\n",
@@ -182,7 +183,7 @@
     "\n",
     "* Temporal difference algorithms combine some features of Monte Carlo (sampling) and Dynamic Programming (bootstrapping).\n",
     "* The basic idea is to update on every step (state, action, reward tuple) of a sample (this is known as TD(0) algorithm):\n",
-    "$$v(S_t) = v(S_t) + \\alpha [R_{t+1} + \\gamma v(S_{t+1}) - v(S_t)]$$\n",
+    "$$v(S_t) \\leftarrow v(S_t) + \\alpha [R_{t+1} + \\gamma v(S_{t+1}) - v(S_t)]$$\n",
     "using current estimates of values ($v(S_{t+1})$) and sample reward ($R_{t+1}$). The name 'temporal difference' comes from the fact that we use estimate from another time-step to compute current one.\n",
     "* Value of a state is:\n",
     "$$v_{\\pi}(s) = \\mathbb{E}_{\\pi}[G_t|S_t=s] = \\mathbb{E}_{\\pi}[R_{t+1} + \\gamma v_{\\pi}(S_{t+1})|S_t=s]$$\n",
@@ -240,6 +241,44 @@
     "    * the methods presented so far can be tailored for concrete problems at hand to get more adequate solutions\n",
     "    * one exaple is considering **after-states** instead of states: in games where transitions between states are deterministic, we might want to compute values of states, after chosing a particular action in given state - this has great value when (for example) chosing action $a_1$ in state $s_1$ leads to the same state $s$ as chosing $a_2$ in $s_2$, by focusing on after-states we keep only one value estimate for both (which speeds up learning and reduces the amount of stat-action pairs to remember)\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Chapter 7. Multi-step Bootstrapping\n",
+    "\n",
+    "* TD method presented in chapter 6 will first update states that are close to terminal ones and it might take some time to update the rest. One way to amend it and use the fact that we have a sequence of rewards through an episode is to use:\n",
+    "$$v(S_t) \\leftarrow v(S_t) + \\alpha [R_{t+1} + \\gamma R_{t+2} + ... + \\gamma^{n-1} R_{t+n} + \\gamma^{n} v(S_{t+n}) - v(S_t)]$$, for some $n>0$ instead of:\n",
+    "$$v(S_t) \\leftarrow v(S_t) + \\alpha [R_{t+1} + \\gamma v(S_{t+1}) - v(S_t)]$$\n",
+    "* This is called **$n$-step TD method** and is a kind of intermediate algorithm between TD(0) and Monte Carlo. The $n$-step update is done towards a target called $n$-step return:\n",
+    "$$G_t^{(n)} = R_{t+1} + \\gamma R_{t+2} + ... + \\gamma^{n-1} R_{t+n} + \\gamma^{n} V_{t+n-1}(S_{t+n})$$\n",
+    "We will be making slight modifications to this equation to adjust it for usage with previous (SARSA, Q-learning) and new algorithms.\n",
+    "* Expectation of $n$-step returns is guaranteed to be a better estimate of $v_{\\pi}$ than $V_{t+n-1}$ in a worst state sense - **the error reduction property** of $n$-state resturns:\n",
+    "$$\\max_s\\lvert \\mathbb{E}_{\\pi}[G_t^{(n)}|S_t=s] - v_{\\pi}(s)\\rvert \\leq \\gamma^n \\max_s \\lvert V_{t+n-1}(s) - v_{\\pi}(s)\\rvert $$\n",
+    "* based on an example of random walk in a space of 19 states where you can walk only left or right (you can imagine it as walking on horizontal line on integers 1 to 19, where 0 and 20 are terminal states) it seems that as we expect $n$-step TD method can outperform both TD(0) and MC algorithms.\n",
+    "* **$n$-step SARSA** - we can apply $G_t^{(n)}$ to SARSA presented in chapter 6 to obtain $n$-step SARSA:\n",
+    "$$G_t^{(n)} = R_{t+1} + \\gamma R_{t+2} + ... + \\gamma^{n-1} R_{t+n} + \\gamma^{n} Q_{t+n-1}(S_{t+n}, A_{t+n})$$\n",
+    "where $G_t^{(n)} == G_t$ for $t+n \\geq T$,\n",
+    "$$Q_{t+n}(S_t,A_t) \\leftarrow Q_{t+n-1}(S_t,A_t) + \\alpha [G_{t}^{(n)}-Q_{t+n-1}(S_t,A_t))]$$\n",
+    "* to get **Expected SARSA** we change the equation for:\n",
+    "$$G_t^{(n)} = R_{t+1} + \\gamma R_{t+2} + ... + \\gamma^{n-1} R_{t+n} + \\gamma^{n}\\sum_a \\pi(a|S_{t+n}) Q_{t+n-1}(S_{t+n}, a)$$\n",
+    "* we can modify $n$-step SARSA and expected SARSA by **adding importance sampling to allow for off-policy learning**:\n",
+    "$$\\rho_t^{t+n}=\\prod_{k=t}^{\\min(t+n-1, T-1)}\\frac{\\pi(A_k|S_k)}{\\mu(A_k|S_k)}$$\n",
+    "by adding them to the update equation:\n",
+    "$$Q_{t+n}(S_t,A_t) \\leftarrow Q_{t+n-1}(S_t,A_t) + \\alpha \\rho_{t+1}^{t+n}[G_{t}^{(n)}-Q_{t+n-1}(S_t,A_t))]$$\n",
+    "for expected SARSA we would use $\\rho_{t+1}^{t+n-1}$ (as it uses expectation in the last term of $G_{t}^{(n)}$).\n",
+    "* **$n$-step Tree Backup** algorithm is a kind of generalization of Expected SARSA (or different way of adjusting it to use $n$-step backups). The idea is to take expectation for every step of the $n$-step update (instead of only at the end). It takes some effort to derive it (see Sutton, page 160). We compute returns in the following way:\n",
+    "$$V_t = \\sum_a \\pi(a|S_t)Q_{t-1}(S_t, a)$$\n",
+    "$$\\delta_t = R_{t+1} + \\gamma V_{t+1} - Q_{t-1}(S_t, A_t)$$\n",
+    "$$G_t^{(n)} = Q_{t-1}(S_t, A_t) + \\sum_{k=t}^{\\min(t+n-1, T-1)}\\delta_k \\prod_{i=t+1}^k \\gamma\\pi(A_i|S_i)$$\n",
+    "* all the algorithms presented so far in this chapter can be seen as special cases of a more general algorithm **$n$-step Q($\\sigma$)**. One variation on what we've seen so far would be an algorithm that among the $n$-step update uses samples for some of the steps (like SARSA) and expectations for the rest (like tree backup). It could be generalised further to use fraction $\\sigma \\in [0, 1]$ of sample backup and $1-\\sigma$ of expected one for a given step. Crude way of doing this would be to:\n",
+    "    * take the $G_t^{(n)}$ for $n$-step SARSA with importance sampling and multiply apropriate components of the sum by $1-\\sigma$\n",
+    "    * take the $G_t^{(n)}$ for tree backup and multiply apropriate components of the sum by $\\sigma$\n",
+    "    * then sum numbers from the above and use it as final $G_t^{(n)}$.\n",
+    "$$$$\n",
+    "More compact way of doing this and complete algorithm is given in the book. It looks interesting, but the question remains if it makes sense to do so. It migh be a way of reducing variance of sample updates of SARSA while keeping it's ability to do big changes especially in the beginning (this is my speculation).\n"
    ]
   }
  ],
