adding half of chapter 8

--- a/books/sutton-reinforcement-learning-intro.ipynb
+++ b/books/sutton-reinforcement-learning-intro.ipynb
@@ -280,6 +280,40 @@
     "$$$$\n",
     "More compact way of doing this and complete algorithm is given in the book. It looks interesting, but the question remains if it makes sense to do so. It migh be a way of reducing variance of sample updates of SARSA while keeping it's ability to do big changes especially in the beginning (this is my speculation).\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Chapter 8. Planning and Learning with Tabular Methods\n",
+    "\n",
+    "* **Model** of the environment is anything that serves as a tool to predict future states and rewards, based on current ones. Distribution models try to compute whole distribution of of states and rewards, while sample models are able to return a sample. Distribution models are stronger (as they allow us to get a sample), but might be harder to estimate.\n",
+    "* Searching for a policy based on model of environment is called **planning**, while searching based on experience is **learning**.\n",
+    "* **Plan-space planning** are methods that involve directly searching through the space of plans (with for example evolutionary methods). **State-space planning** involves searching through space of states for optimal policy or a path towards a goal.\n",
+    "* Having models we can **simulate experience** (state transitions with rewards or even whole episodes) on which we can use methods from previous chapters to train policy.\n",
+    "* Relationships between learning and planning:\n",
+    "$$value/policy \\rightarrow_{acting} experience \\rightarrow_{direct RL} value / policy$$\n",
+    "$$value/policy \\rightarrow_{acting} experience \\rightarrow_{model learning} model \\rightarrow_{planning} value / policy$$\n",
+    "* We combine both of the above to facilate RL algorithms. The example is Dyna architecture which does exactly that.\n",
+    "* Tabular Dyna-Q:\n",
+    "    0. Initialize $Q(s,a)$ and $Model(s,a)$ for all $s \\in \\mathcal{S}$, $a \\in \\mathcal{A}(s)$\n",
+    "    1. $S \\leftarrow$ current (nonterminal) state\n",
+    "    2. $A \\leftarrow \\epsilon$-greedy$(S,Q)$\n",
+    "    3. Execute $A$, observe $R$ and $S'$\n",
+    "    4. $Q(S,A) \\leftarrow Q(S,A) + \\alpha [R + \\gamma \\max_a Q(S',a) - Q(S,A)]$\n",
+    "    5. $Model(S,A) \\leftarrow R,S'$ (whole model is memorizing last transition, we assume deterministic environment)\n",
+    "    6. Repeat $n$ times:\n",
+    "        * $S \\leftarrow $ random previously observed state\n",
+    "        * $A \\leftarrow$ random action previously taken in $S$\n",
+    "        * $R, S' \\leftarrow Model(S,A)$\n",
+    "        * $Q(S,A) \\leftarrow Q(S,A) + \\alpha [R + \\gamma \\max_a Q(S',a) - Q(S,A)]$\n",
+    "    7. go to 2.\n",
+    "* Adding planning to RL greatly speeds-up learning in tabular environments, but this may not generalise easily. When model is wrong we may be learning suboptimal policy. There are two ways of this happening and their influence is assymetric:\n",
+    "    * we are over optimistic about some states - this is the better case, because we will be actiong upon it a lot which in turn will make us learn the true vale of the state (bias will disappear),\n",
+    "    * we are too pessimistic about a state - in this case we might stop visiting it and won't be able to learn it's true value. (This may also be a problem when the environment itself changes - we might want to explore states for this reason.)\n",
+    "    \n",
+    "    This is basically exploration vs explitation kind of problem in planning setting. Dyna-Q+ is an algorithm that in the planning process (step 6. from tabular Dyna-Q) adds a bonus reward to actions depending on how long they haven't been tried: $r + \\kappa \\sqrt{\\tau}$, where $\\kappa$ is some small fraction and $\\tau$ is time steps since last using given arm. Another changes (introduced by Dyna-Q+) is considering actions that were never taken in visited states with their initial reward of 0 and making them lead back to the same state.\n"
+   ]
   }
  ],
  "metadata": {
