notes from 1 class of udacity Deep NN course and first half of Sutton chapter 9

--- a/books/sutton-reinforcement-learning-intro.ipynb
+++ b/books/sutton-reinforcement-learning-intro.ipynb
@@ -314,6 +314,34 @@
     "    \n",
     "    This is basically exploration vs explitation kind of problem in planning setting. Dyna-Q+ is an algorithm that in the planning process (step 6. from tabular Dyna-Q) adds a bonus reward to actions depending on how long they haven't been tried: $r + \\kappa \\sqrt{\\tau}$, where $\\kappa$ is some small fraction and $\\tau$ is time steps since last using given arm. Another changes (introduced by Dyna-Q+) is considering actions that were never taken in visited states with their initial reward of 0 and making them lead back to the same state.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Chapter 9. On-policy prediction with approximation\n",
+    "\n",
+    "* So far we considered tabular value functions (their domain would be state of all states and we would have separate, independent value for each state). Such approach is feasible only for very limited amount of problems where state-spaces are not too big. Here we consider some generalization of previous approach where we allow value functions to be approximate and depend on some parameters: $v_{\\pi}(s) \\approx \\hat{v}_{\\pi}(s, \\theta)$.\n",
+    "* With approximate value function updating values for on state changes values for similar / close states. \n",
+    "* Since value function will be approximate we will need to define our goal (previously, given a policy we were looking for value function that wouldn't change after an update) in terms of being very close to the value function of a given policy. One way of doing this is to minimize **Mean Squared Value Error**:\n",
+    "$$MSVE(\\theta) = \\sum_{s} d(s) [v_{\\pi}(s) - \\hat{v}(s,\\theta)]^2$$,\n",
+    "where $d(s)$ is a weight of importance of state $s$. (Since by updating on given state we will be updating many others, we need to decide which states we care about the most.) Usually the weight will be a probability of being in state $s$ in given episode.\n",
+    "* New way of looking at value updates in RL is the following: an update at a given state:\n",
+    "$$s \\rightarrow g$$\n",
+    "tells us that we want the value of $s$ be close to $g$. This looks like supervised learning problem where we predict values for states. The nature of the problem in our case is such that we will not have a batch of data on which we want to converge to some function which will later use to predict values for new states. We will rather have a stream of pairs $(s,g)$ from live episodes on which we want to learn and use the learnt function immediately. That means that:\n",
+    "    * we will want to use online methods,\n",
+    "    * we will want to use methods that handle non-stationarity well.\n",
+    "* One good method of function approximation from supervised learning is **stochastic gradient descent**. We will use it to learn $\\theta$ (by minimizing error on observed examples):\n",
+    "$$\\theta_{t+1} \\leftarrow \\theta_t - \\frac{1}{2}\\alpha\\nabla (v_{\\pi}(S_t) - \\hat{v}(S_t, \\theta_t))^2 $$\n",
+    "$$\\theta_{t+1} \\leftarrow \\theta_t + \\alpha (v_{\\pi}(S_t) - \\hat{v}(S_t, \\theta_t)) \\nabla \\hat{v}(S_t, \\theta_t)$$\n",
+    "* since we don't know $v_{\\pi}(S_t)$ we will have to approximate it somehow. We can:\n",
+    "    * use $G_t$ after entire episodes (**Monte Carlo** approach) - the good property of $G_t$ is that it's unbiased and it's easy to show that with standard conditions on $\\alpha$ this method will converge.\n",
+    "    * use $R_{t+1} + \\gamma \\hat{v}(S_{t+1}, \\theta_t)$ as in TD methods - this will be biased but can be used to learn during episodes,\n",
+    "    * any of the \"in-between\" methods of the above (like in multistep TD).\n",
+    "* new problems that arise with value approx is how to actually approximate the value function, this includes:\n",
+    "    * how to encode states (the best way has the property such that value of similar / close states is close) - here we could use polynomial or fourier basis,\n",
+    "    * how to combine state encoding with parameters $\\theta$ - the quickest and easiest approach is to use linear combination of parameters with state encodings other would be to use artificial neural nets.\n"
+   ]
   }
  ],
  "metadata": {
