--- a/notes/neural-nets.ipynb
+++ b/notes/neural-nets.ipynb
@@ -27,6 +27,23 @@
     "- https://en.wikipedia.org/wiki/Backpropagation\n",
     "- https://distill.pub/2017/momentum/ (added to 'To Read' in article summaries)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Google udacity course on DNN\n",
+    "\n",
+    "* While training a model, a change in validation set of at least 30 cases (on 30 points on which we used to give wrong label) tends to be statistically significant. That is why in practice validation sets of size of at least 30000 examples are used (to get results significant to first decimal place). This is not true for problems where some classes are very small.\n",
+    "* **Stochastic gradient descent**: using small random sample from training set on which to compute loss and gradient update. This is generally worse then using whole dataset (on single iterations it may even increase the loss), but scales well and is fast (you still need to order of magnitude more iterations, but on very small samples). Randomness of samples is essential.\n",
+    "    * we want imputs to be of 0 mean and equal small variance,\n",
+    "    * we want inital weights to be random, with expected value 0 and equal small variance,\n",
+    "    * **momentum**: simple version is using running average of gradient updates instead of the update itself\n",
+    "    * learning rate decay - we want to do it, although there is no consensu on how to do it best yet.\n",
+    "    * for SGD if your model doesn't perform well a good first thing to try is lowering learning rate (also it is a common thing for models with higher learning rate to initially learn faster, but to reach worse plateau)\n",
+    "\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
